# flock

./: Cargo.toml
assets/shaders/: crt.wgsl
src/: lib.rs  main.rs
src/core/: cursor.rs  mod.rs  state.rs
src/map/: components.rs  generation.rs  generator.rs  mod.rs  render.rs
src/render/: components.rs  crt.rs  mod.rs
src/simulation/: components.rs  events.rs  mod.rs  propagation.rs  systems.rs
src/terminal/: components.rs  mod.rs  parser.rs  systems.rs
src/utils/: consts.rs  convert.rs  mod.rs
